# mids-capstone-poliwatch

./: pyproject.toml
app/tmp/: users.csv
data engineering/: Forecast Efficacy Definition.docx  data sets.txt
data engineering/comittees/: assignments_118.csv  comittee.ipynb  comitteev2.ipynb  committee_assignments_116.csv  committee_assignments_117.csv  committee_assignments_118.csv  committee_descriptions.ipynb  committees_prod.ipynb  new_look.ipynb  propublica.ipynb  read_committee.ipynb  subcommittee_assignments_116.csv  subcommittee_assignments_117.csv  subcommittee_assignments_118.csv
data engineering/comittees/bert_model/: bert_ascociation.ipynb  bert_ascociation_working.ipynb
data engineering/comittees/enriched/: committees_enriched.csv  data_enrichment.ipynb  industry_descriptions.csv  industry_enriched.csv  sector_descriptions.csv  subcommittees_enriched.csv
data engineering/committee_hosting/: 116_assignments.csv  117_assaignments.csv  118_assaignments.csv  scratch.ipynb
data engineering/functions/: .Rhistory  clean data.R
data engineering/notebooks/: DE.ipynb  beta.ipynb  committees.ipynb  scraper.ipynb
llm/: bills.ipynb  pyproject.toml
llm/commitees/: committee_assignments.json  committee_links.json  committee_mappings.json  committee_parser.ipynb
llm/llm/: RAG Model Implementation.ipynb  asset_descriptions.csv  comittee_enriched.csv  committee.csv  committees.csv  membership.csv  subcommittee.csv  subcommittee_enriched.csv  view.ipynb
visualization/: Exploratory Data Analysis V2.ipynb  Exploratory Data Analysis.ipynb
(+34 files in other folders)
