[tool.poetry]
name = "mids-capstone"
version = "0.1.0"
description = ""
authors = ["Mats Dodd <mats.dodd12@gmail.com>"]
readme = "README.md"
packages = [{include = "mids_capstone"}]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"
ipykernel = "^6.26.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
