[tool.poetry]
name = "llm"
version = "0.1.0"
description = ""
authors = ["Spencer <spencer_zezulka@berkeley.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
jupyter = "^1.0.0"
langchain = "^0.0.308"
tqdm = "^4.66.1"
unstructured = "^0.10.18"
jq = "^1.6.0"
pandas = "^2.1.1"
openai = "^0.28.1"
pypdf2 = "^3.0.1"
nameparser = "^1.1.3"

xmltodict = "^0.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
